--- a/index.html
+++ b/index.html
@@ -17,28 +17,34 @@
     <section id="timeline">
         <ul>
             <li>
-                <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
+                </div>
             </li>
             <li>
-                <h3><i class="fas fa-chevron-right"></i>HTML & CSS</h3>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
+                </div>
             </li>
             <li>
-                <h3><i class="fas fa-chevron-right"></i>HTML & CSS</h3>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
+                </div>
             </li>
             <li>
-                <h3><i class="fas fa-chevron-right"></i>HTML & CSS</h3>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
+                </div>
             </li>
             <li>
-                <h3><i class="fas fa-chevron-right"></i>HTML & CSS</h3>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>2015:HTML & CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
-            </li>
-            <li>
-                <h3><i class="fas fa-chevron-right"></i>HTML & CSS</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, mollitia fugiat? Officiis, consequatur voluptates? Facilis, maxime porro veniam debitis eaque perferendis at exercitationem vero tempore odio hic error velit animi.</p>
+                </div>
             </li>
 
         </ul>
